Fix incorrect payroll test setup and expectation